On mobile, top menu goes to fixed position in bottom of window

--- a/web/src/stylesheets/components/_top-menu.scss
+++ b/web/src/stylesheets/components/_top-menu.scss
@@ -214,30 +214,75 @@ header {
 }
 
 @media (max-width: 767px) {
+
+	#main-header {
+		background: transparent;
+	}
+
+	div.lr-top-menu {
+		position: fixed;
+		width: 100%;
+		left: 0;
+		bottom: 0;
+		background: #fff;
+		z-index: 999;
+
+	}
+
 	.top-menu {
 		margin-top: 0;
+		@include clearfix();
+		display: flex;
+		justify-content: center;
+		box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 
 		.dropdown {
 			margin-top: 0;
 		}
 
-		li.link {
-			margin-bottom: 0;
-			margin-right: 0;
+
+
+		> li.link {
+			margin: 0;
+			float: none;
+			flex: 1;
+			display: flex;
 
 			a {
 				&.fa {
+					flex: 1;
+					align-self: center;
 					width: 35px;
 					text-align: center;
 					padding: 6px 3px;
 					&::before { font-size: 1.15rem; }
 				}
 				span {
-					text-indent: -250%;
-					overflow: hidden;
-					white-space: nowrap;
+					display: none;
+					//text-indent: -250%;
+					//overflow: hidden;
+					//white-space: nowrap;
 				}
 			}
 		}
+
+		.dropdown-menu.extended {
+			top: auto;
+			bottom: 3.1rem;
+			left: auto;
+			right: 0;
+			border-radius: 0;
+			box-shadow: none;
+
+			> li:last-child {
+				border-radius: 0;
+			}
+
+			.log-arrow-up {
+				display: none;
+			}
+
+		}
+
 	}
 }
